--- a/package.json
+++ b/package.json
@@ -10,21 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@gsap/react": "^2.1.2",
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.5.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.34.0",
-    "gsap": "^3.14.2",
     "lenis": "^1.3.17",
-    "locomotive-scroll": "^5.0.1",
     "react": "^19.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.2",
-    "react-router-dom": "^7.13.0",
-    "three": "^0.182.0"
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
